# media-resource-calculator

./: CMakeLists.txt  README.md
calculator/: CMakeLists.txt  display_resource_table.cpp  display_resource_table.h  media-resource-calculator.pc.in  resource.cpp  resource.h  resource_calculator.cpp  resource_calculator.h  resource_calculator_c.cpp  resource_calculator_c.h  resource_table.cpp  resource_table.h  video_resource_table.cpp  video_resource_table.h
data/: ConfMacros.cmake  generate.sh  qemux86_adec.json  qemux86_disp.json  qemux86_vdec.json  qemux86_venc.json  raspberrypi3_adec.json  raspberrypi3_vdec.json  raspberrypi3_venc.json  raspberrypi4_disp.json  raspberrypi4_vdec.json  raspberrypi4_venc.json
tests/: CMakeLists.txt  test_raspberrypi3_adec.cpp  test_raspberrypi3_vdec.cpp  test_resource_table.cpp  test_video_resource_table.cpp
tests/should/: should.c  should.h
